<resources>
    <string name="app_name">LockLogic</string>
    <string name="app_icon">APP_ICON</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_estas_registrado_registrate">¿No estas registrado? Registrate</string>
    <string name="administrador_de_puertas">Puertas</string>
    <string name="home">Home</string>
    <string name="agregar_puerta">Agregar puerta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse_register">Registrarse</string>
    <string name="blank_text" />
    <string name="add_door">add_door</string>
    <string name="activo">Activo</string>
    <string name="ip_control_de_puerta">IP control de puerta</string>
    <string name="nombre">Nombre</string>
    <string name="puertas">Puertas</string>
</resources>