<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
    tools:context=".MainActivity"
    android:layout_margin="40sp"
    >

    <ImageView
        android:id="@+id/logoIcon"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="20dp"

        android:contentDescription="@string/app_icon"
        android:src="@drawable/user_login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logoIcon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:hint="@string/contrase_a"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInPaswword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:backgroundTint="@color/purple_main"
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Registerbtn"
        android:layout_width="match_parent"
        android:backgroundTint="@color/purple_main"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegistrar"
        android:text="@string/no_estas_registrado_registrate"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Registerbtn" />




</androidx.constraintlayout.widget.ConstraintLayout>